--- a/memory-game-1/memory-game/index.html
+++ b/memory-game-1/memory-game/index.html
@@ -26,7 +26,7 @@
 		</p>
 
 		<div id="game-board" class="board clearfix"></div>
-
+		<button type = "reset">Reset</button>
 	</main>
 
 	<footer class="clearfix">
